--- a/app/src/main/res/layout/concierge_grid_item.xml
+++ b/app/src/main/res/layout/concierge_grid_item.xml
@@ -12,28 +12,48 @@
     card_view:contentPadding="5dp">
 
     <LinearLayout
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
+        android:layout_height="fill_parent"
+        android:weightSum="1">
 
-        <TextView
-            android:id="@+id/concierge_name"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:text="Concierge Name"
-            android:textColor="@color/black"
-            android:textSize="@dimen/text_announcement_description" />
+            android:layout_weight=".8">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Specialty"
-            android:id="@+id/concierge_specialty"
-            android:textColor="@color/gray"
-            android:layout_marginLeft="5dp"
-            android:layout_marginBottom="5dp" />
+            <TextView
+                android:id="@+id/concierge_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:text="Concierge Name"
+                android:textColor="@color/black"
+                android:textSize="@dimen/text_announcement_description" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Specialty"
+                android:id="@+id/concierge_specialty"
+                android:textColor="@color/gray"
+                android:layout_marginLeft="5dp"
+                android:layout_marginBottom="5dp" />
+
+        </LinearLayout>
+
+        <ImageButton
+            android:id="@+id/concierge_twitter_btn"
+            android:layout_width="0dp"
+            android:layout_height="30dp"
+            android:src="@drawable/twitter_icon"
+            android:contentDescription="twitter"
+            android:background="transparent"
+            android:layout_weight=".2"
+            android:layout_gravity="center_vertical" />
+
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
