--- a/app/src/main/res/layout/announcement_list_item.xml
+++ b/app/src/main/res/layout/announcement_list_item.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/tools"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
     android:layout_centerHorizontal="true"
-    card_view:cardCornerRadius="6dp"
+    card_view:cardCornerRadius="2dp"
     card_view:cardElevation="3dp"
     card_view:contentPadding="5dp">
 
