--- a/app/src/main/res/layout/award_grid_item.xml
+++ b/app/src/main/res/layout/award_grid_item.xml
@@ -7,7 +7,8 @@
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
     android:layout_centerHorizontal="true"
-    card_view:cardCornerRadius="6dp"
+    android:background="@color/lightBrown"
+    card_view:cardCornerRadius="2dp"
     card_view:cardElevation="3dp"
     card_view:contentPadding="5dp">
 
