--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Material Design Base Colors -->
-    <color name="colorPrimary">@color/white</color>
-    <color name="colorPrimaryDark">@color/dev_green</color>
-
+    <color name="colorPrimary">@color/lightBrown</color>
+    <color name="colorPrimaryDark">@color/darkBrown</color>
+    <color name="colorPrimaryOrange">@color/spartaOrange</color>
 
 <!-- Begin JN Basic Colors -->
     <!-- Basic colors, laziness -->
@@ -14,9 +14,11 @@
     <color name="blue">#0000FF</color>
     <color name="yellow">#FFFF00</color>
     <color name="orange">#FFA500</color>
-
+    <color name="lightBrown">#F7E8DE</color>
+    <color name="darkBrown">#433830</color>
     <!-- Special colors -->
     <color name="transparent">#00000000</color>
+    <color name="spartaOrange">#D89F39</color>
 
     <!-- Color variations -->
     <color name="light_blue">#00FFFF</color>
