--- a/app/src/main/res/layout/award_grid_item.xml
+++ b/app/src/main/res/layout/award_grid_item.xml
@@ -5,12 +5,14 @@
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
+    android:layout_margin="1dp"
+    card_view:contentPadding="12dp"
+    card_view:contentPaddingTop="12dp"
+    card_view:contentPaddingBottom="12dp"
     android:layout_centerHorizontal="true"
-    android:background="@color/lightBrown"
-    card_view:cardCornerRadius="2dp"
-    card_view:cardElevation="3dp"
-    card_view:contentPadding="5dp">
+    card_view:cardCornerRadius="1dp"
+    card_view:cardElevation="1dp"
+    card_view:cardBackgroundColor="#fffff0e6">
 
     <LinearLayout
         android:orientation="vertical"
@@ -27,8 +29,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Award Title"
-                android:textColor="@color/black"
+                android:textColor="@color/darkBrown"
                 android:textSize="@dimen/text_announcement_title"
+                android:textStyle="bold"
                 />
 
             <View
@@ -43,7 +46,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:text="Company X"
-                android:textColor="@color/gray"
+                android:textColor="@color/lighterDarkBrown"
                 android:textSize="@dimen/text_announcement_date"/>
 
         </LinearLayout>
@@ -58,8 +61,7 @@
                 android:layout_height="wrap_content"
                 android:text="$1000"
                 android:id="@+id/award_value"
-                android:textColor="@color/black"
-                android:layout_marginTop="5dp"
+                android:textColor="@color/darkBrown"
                 android:textIsSelectable="true"
                 android:textSize="@dimen/text_announcement_description" />
 
@@ -67,9 +69,9 @@
                 android:id="@+id/info_description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
+                android:layout_marginLeft="5dp"
                 android:text="Details of the Award"
-                android:textColor="@color/black"
+                android:textColor="@color/darkBrown"
                 android:textSize="@dimen/text_announcement_description" />
         </LinearLayout>
 
