--- a/app/src/main/res/layout/fragment_concierge.xml
+++ b/app/src/main/res/layout/fragment_concierge.xml
@@ -5,9 +5,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/container_base"
     android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="10dp">
+    style='@style/fragment_cards'>
 
     <EditText
         android:layout_width="fill_parent"
@@ -33,10 +31,18 @@
         android:background="@drawable/rounded_button"
         android:layout_margin="3dp" />
 
+
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/list_cards"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         />
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </LinearLayout>
