--- a/app/src/main/res/layout/fragment_announcements.xml
+++ b/app/src/main/res/layout/fragment_announcements.xml
@@ -5,9 +5,12 @@
               xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/container_base"
     android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="10dp">
+    style='@style/fragment_cards'>
+
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/list_cards"
@@ -15,4 +18,9 @@
         android:layout_height="wrap_content"
     />
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></RelativeLayout>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 </LinearLayout>
