--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -54,4 +54,10 @@
         <item name="android:src">@drawable/ic_pin</item>
     </style>
 
+    <style name="fragment_cards">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_margin">5dp</item>
+    </style>
+
 </resources>
